# FABulous-bit-gen

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  ruff.toml
.github/workflows/: pytest.yml  release_please.yml
FABulous_bit_gen/: bit_gen.py
fabulous_bit_gen/: __init__.py  bit_gen.py
tests/: README.md  conftest.py
tests/integration/: test_full_bitstream.py
tests/test_data/bouncy_spi_screen_complex_dff_fab/: top.fasm  top.json
tests/test_data/bouncy_spi_screen_complex_dff_fab/reference/: top.csv  top.hex  top.vh  top.vhd
tests/test_data/bouncy_spi_screen_standard_fab/: top.fasm  top.json
tests/test_data/bouncy_spi_screen_standard_fab/reference/: top.csv  top.hex  top.vh  top.vhd
tests/test_data/output/: sequential_16bit_en.vhd
tests/test_data/sequential_16bit_en/: top.fasm
tests/test_data/sequential_16bit_en/reference/: top.csv  top.vh  top.vhd
tests/unit/: test_bit_gen_utility.py  test_cli.py  test_genBitstream.py
