[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "FABulous-bit-gen"
authors = [
  { name = "Jing, Nguyen, Bea, Bardia, Dirk", email = "dirk.koch@manchester.ac.uk" },
]
description = "Bitstream generation utilities for FABulous FPGA fabrics"
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["version"]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]

dependencies = ['loguru>=0.7.0', 'FABulous-fasm>=0.2.0', 'packaging>=24.0']

[project.urls]
Repository = "https://github.com/FPGA-Research/FABulous-bit-gen"
Documentation = "https://fabulous.readthedocs.io"

[project.scripts]
bit_gen = "fabulous_bit_gen.bit_gen:bit_gen"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"

[tool.setuptools.packages.find]
include = ["fabulous_bit_gen*"]

[tool.setuptools.package-data]
fabulous_bit_gen = ["**/*"]


[dependency-groups]
dev = ["pre-commit>=4.2.0", "ruff>=0.12.7", "pytest>=8.0.0", "pytest-mock>=3.14.0"]

[tool.uv.sources]
fasm = { git = "https://github.com/FPGA-Research/fasm.git" }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
